desktop/src-tauri/tests/snapshots/ipc_schema__file_done_payload_schema.snap
---
source: tests/ipc_schema.rs
assertion_line: 12
expression: p
---
{
  "id": "abc-123",
  "srcBytes": 1024,
  "outBytes": 512
}
