desktop/src-tauri/tests/snapshots/ipc_schema__file_error_payload_schema.snap
---
source: tests/ipc_schema.rs
assertion_line: 18
expression: p
---
{
  "id": "abc-123",
  "msg": "decode failed"
}
