desktop/src-tauri/tests/snapshots/ipc_schema__file_progress_payload_schema.snap
---
source: tests/ipc_schema.rs
assertion_line: 55
expression: p
---
{
  "id": "abc-123",
  "pct": 50
}
