desktop/src-tauri/tests/snapshots/ipc_schema__file_skipped_payload_schema.snap
---
source: tests/ipc_schema.rs
assertion_line: 24
expression: p
---
{
  "id": "abc-123",
  "srcBytes": 1024
}
