desktop/src-tauri/tests/snapshots/ipc_schema__trash_fallback_payload_schema.snap
---
source: tests/ipc_schema.rs
assertion_line: 43
expression: p
---
{
  "id": "abc-123",
  "note": "Trash unavailable; original backed up to /tmp/foo.jpg.original"
}
